# Ray-Ribbon-Intersection

./: .gitignore  CMakeLists.txt  README.md
scenes/: default.rrs
scripts/: run_demo.ps1  setup_optix.ps1
src/: main.cpp  optix_renderer.cpp  optix_renderer.h
src/app/: render_app.cpp  render_app.h
src/core/: log.h
src/device/: ribbon_kernels.cu
src/io/: image_io.cpp  image_io.h
src/scene/: scene.cpp  scene.h
src/shared/: launch_params.h  light_types.h  ribbon_types.h
